--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.0.0",
-    "@nfactorial/webgl_display": "0.0.4",
+    "@nfactorial/webgl_display": "0.0.13",
+    "@nfactorial/webgl_helper": "0.0.11",
     "babel-loader": "^8.0.0",
     "babel-preset-env": "^1.7.0"
   },
